establish standalone Java client repository